{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 68,
  "lineage": "5e2189bb-6fc3-881c-27b9-08f3887aa7fa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096a5583ef9031adc",
            "association_id": "eipassoc-0771631501f7a1a46",
            "domain": "vpc",
            "id": "eipalloc-096a5583ef9031adc",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b08c09919ef5f594",
            "private_dns": "ip-10-100-0-104.ec2.internal",
            "private_ip": "10.100.0.104",
            "public_dns": "ec2-34-206-148-44.compute-1.amazonaws.com",
            "public_ip": "34.206.148.44",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "CNB-eip-0"
            },
            "tags_all": {
              "Name": "CNB-eip-0",
              "costCenter": "SYSENG",
              "environment": "dev",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "development",
              "tagVersion": "1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.cnb_igw",
            "aws_vpc.cnb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e420d0d53b785cfc",
            "association_id": "eipassoc-060f7b9b4ce535ed8",
            "domain": "vpc",
            "id": "eipalloc-0e420d0d53b785cfc",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0afd662117664d8ef",
            "private_dns": "ip-10-100-1-171.ec2.internal",
            "private_ip": "10.100.1.171",
            "public_dns": "ec2-34-192-238-215.compute-1.amazonaws.com",
            "public_ip": "34.192.238.215",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "CNB-eip-1"
            },
            "tags_all": {
              "Name": "CNB-eip-1",
              "costCenter": "SYSENG",
              "environment": "dev",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "development",
              "tagVersion": "1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.cnb_igw",
            "aws_vpc.cnb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "cnb_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:947941747067:internet-gateway/igw-08518f6e0f1b4a5e6",
            "id": "igw-08518f6e0f1b4a5e6",
            "owner_id": "947941747067",
            "tags": {
              "Name": "CNB IGW"
            },
            "tags_all": {
              "Name": "CNB IGW",
              "costCenter": "SYSENG",
              "environment": "dev",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "development",
              "tagVersion": "1"
            },
            "vpc_id": "vpc-0d58918c8652fd105"
          },
          "dependencies": [
            "aws_vpc.cnb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateways",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096a5583ef9031adc",
            "connectivity_type": "public",
            "id": "nat-08046c639884e4f1f",
            "network_interface_id": "eni-0b08c09919ef5f594",
            "private_ip": "10.100.0.104",
            "public_ip": "34.206.148.44",
            "subnet_id": "subnet-08c2a220cb0de2969",
            "tags": {
              "Name": "CNB-NGW-0"
            },
            "tags_all": {
              "Name": "CNB-NGW-0",
              "costCenter": "SYSENG",
              "environment": "dev",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "development",
              "tagVersion": "1"
            }
          },
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.cnb_igw",
            "aws_subnet.cnb_public_subnets",
            "aws_vpc.cnb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e420d0d53b785cfc",
            "connectivity_type": "public",
            "id": "nat-02466c28cd86b8204",
            "network_interface_id": "eni-0afd662117664d8ef",
            "private_ip": "10.100.1.171",
            "public_ip": "34.192.238.215",
            "subnet_id": "subnet-09cebdc5cdbfb07bc",
            "tags": {
              "Name": "CNB-NGW-1"
            },
            "tags_all": {
              "Name": "CNB-NGW-1",
              "costCenter": "SYSENG",
              "environment": "dev",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "development",
              "tagVersion": "1"
            }
          },
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.cnb_igw",
            "aws_subnet.cnb_public_subnets",
            "aws_vpc.cnb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cnb_private_crts",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:947941747067:route-table/rtb-073ccfdb4524ff956",
            "id": "rtb-073ccfdb4524ff956",
            "owner_id": "947941747067",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-08046c639884e4f1f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CNB-Private-CRT-us-east-1c"
            },
            "tags_all": {
              "Name": "CNB-Private-CRT-us-east-1c",
              "costCenter": "SYSENG",
              "environment": "dev",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "development",
              "tagVersion": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d58918c8652fd105"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.cnb_igw",
            "aws_nat_gateway.nat_gateways",
            "aws_subnet.cnb_public_subnets",
            "aws_vpc.cnb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:947941747067:route-table/rtb-0e56affa46e0d6314",
            "id": "rtb-0e56affa46e0d6314",
            "owner_id": "947941747067",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-02466c28cd86b8204",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CNB-Private-CRT-us-east-1d"
            },
            "tags_all": {
              "Name": "CNB-Private-CRT-us-east-1d",
              "costCenter": "SYSENG",
              "environment": "dev",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "development",
              "tagVersion": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d58918c8652fd105"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.cnb_igw",
            "aws_nat_gateway.nat_gateways",
            "aws_subnet.cnb_public_subnets",
            "aws_vpc.cnb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "cnb_public_crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:947941747067:route-table/rtb-09011cca2deb5217b",
            "id": "rtb-09011cca2deb5217b",
            "owner_id": "947941747067",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08518f6e0f1b4a5e6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CNB-Public-CRT"
            },
            "tags_all": {
              "Name": "CNB-Public-CRT",
              "costCenter": "SYSENG",
              "environment": "dev",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "development",
              "tagVersion": "1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d58918c8652fd105"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.cnb_igw",
            "aws_vpc.cnb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cnb_crta_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078d3b3ff5d6ec790",
            "route_table_id": "rtb-073ccfdb4524ff956",
            "subnet_id": "subnet-053b48d899a8d12d9"
          },
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.cnb_igw",
            "aws_nat_gateway.nat_gateways",
            "aws_route_table.cnb_private_crts",
            "aws_subnet.cnb_private_subnets",
            "aws_subnet.cnb_public_subnets",
            "aws_vpc.cnb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04373e61881ab0a51",
            "route_table_id": "rtb-0e56affa46e0d6314",
            "subnet_id": "subnet-0346126fa643ab370"
          },
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.cnb_igw",
            "aws_nat_gateway.nat_gateways",
            "aws_route_table.cnb_private_crts",
            "aws_subnet.cnb_private_subnets",
            "aws_subnet.cnb_public_subnets",
            "aws_vpc.cnb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "cnb_crta_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9554f05c8e863e5",
            "route_table_id": "rtb-09011cca2deb5217b",
            "subnet_id": "subnet-08c2a220cb0de2969"
          },
          "dependencies": [
            "aws_internet_gateway.cnb_igw",
            "aws_route_table.cnb_public_crt",
            "aws_subnet.cnb_public_subnets",
            "aws_vpc.cnb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c984bd8cbbcf3546",
            "route_table_id": "rtb-09011cca2deb5217b",
            "subnet_id": "subnet-09cebdc5cdbfb07bc"
          },
          "dependencies": [
            "aws_internet_gateway.cnb_igw",
            "aws_route_table.cnb_public_crt",
            "aws_subnet.cnb_public_subnets",
            "aws_vpc.cnb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cnb_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:947941747067:subnet/subnet-053b48d899a8d12d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053b48d899a8d12d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "947941747067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-0-us-east-1c"
            },
            "tags_all": {
              "Name": "Private-Subnet-0-us-east-1c",
              "costCenter": "SYSENG",
              "environment": "dev",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "development",
              "tagVersion": "1"
            },
            "vpc_id": "vpc-0d58918c8652fd105"
          },
          "dependencies": [
            "aws_vpc.cnb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:947941747067:subnet/subnet-0346126fa643ab370",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.100.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0346126fa643ab370",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "947941747067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-1-us-east-1d"
            },
            "tags_all": {
              "Name": "Private-Subnet-1-us-east-1d",
              "costCenter": "SYSENG",
              "environment": "dev",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "development",
              "tagVersion": "1"
            },
            "vpc_id": "vpc-0d58918c8652fd105"
          },
          "dependencies": [
            "aws_vpc.cnb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "cnb_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:947941747067:subnet/subnet-08c2a220cb0de2969",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c2a220cb0de2969",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "947941747067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-0-us-east-1c"
            },
            "tags_all": {
              "Name": "Public-Subnet-0-us-east-1c",
              "costCenter": "SYSENG",
              "environment": "dev",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "development",
              "tagVersion": "1"
            },
            "vpc_id": "vpc-0d58918c8652fd105"
          },
          "dependencies": [
            "aws_vpc.cnb_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:947941747067:subnet/subnet-09cebdc5cdbfb07bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cebdc5cdbfb07bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "947941747067",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-1-us-east-1d"
            },
            "tags_all": {
              "Name": "Public-Subnet-1-us-east-1d",
              "costCenter": "SYSENG",
              "environment": "dev",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "development",
              "tagVersion": "1"
            },
            "vpc_id": "vpc-0d58918c8652fd105"
          },
          "dependencies": [
            "aws_vpc.cnb_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cnb_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:947941747067:vpc/vpc-0d58918c8652fd105",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-0a145e2b0c66603a3",
            "default_route_table_id": "rtb-0da5de0c7390459db",
            "default_security_group_id": "sg-020d284422395c09e",
            "dhcp_options_id": "dopt-059aa540f16932550",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d58918c8652fd105",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0da5de0c7390459db",
            "owner_id": "947941747067",
            "tags": {
              "Name": "CNB VPC test"
            },
            "tags_all": {
              "Name": "CNB VPC test",
              "costCenter": "SYSENG",
              "environment": "dev",
              "expirationDate": "12/12/2022",
              "owner": "eanselmi@edrans.com",
              "project": "CNB",
              "role": "development",
              "tagVersion": "1"
            }
          }
        }
      ]
    }
  ]
}